{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 10468,
  "lineage": "fc6f17aa-f321-2dbc-14d9-76a77fbcd5fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "from_spokes_to_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-0e03c1e4a4dac9f45_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-0a60bd49824328a63",
            "transit_gateway_route_table_id": "tgw-rtb-0e03c1e4a4dac9f45"
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "spoke_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app1_vm01",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06bd264a5eb14e083",
            "arn": "arn:aws:ec2:us-east-1:242407861384:instance/i-020a7daecf257f638",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "lab-spoke_vm_instance_profile",
            "id": "i-020a7daecf257f638",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "edp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef7fb35d4a02b7c8",
            "private_dns": "ip-10-104-0-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.104.0.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:242407861384:key/d690df50-ae20-4709-87a2-2cca144a5348",
                "throughput": 0,
                "volume_id": "vol-0d77d8a59cf6b7a8c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0168b718fb9ec7ab3",
            "tags": {
              "Name": "lab-app1_vm01",
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "tags_all": {
              "Name": "lab-app1_vm01",
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052a5b5e4be783d27"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "app1_vm02",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06bd264a5eb14e083",
            "arn": "arn:aws:ec2:us-east-1:242407861384:instance/i-0feee451a0431232a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "lab-spoke_vm_instance_profile",
            "id": "i-0feee451a0431232a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "edp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02eacc7a0a3676126",
            "private_dns": "ip-10-104-128-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.104.128.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:242407861384:key/d690df50-ae20-4709-87a2-2cca144a5348",
                "throughput": 0,
                "volume_id": "vol-0f947d8b2ab8ec001",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f782e8625e3a81b",
            "tags": {
              "Name": "lab-app1_vm02",
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "tags_all": {
              "Name": "lab-app1_vm02",
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052a5b5e4be783d27"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_lb[\"app1-nlb\"]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:loadbalancer/net/lab-app1-nlb/a99fa07834e256e5",
            "arn_suffix": "net/lab-app1-nlb/a99fa07834e256e5",
            "dns_name": "lab-app1-nlb-a99fa07834e256e5.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:loadbalancer/net/lab-app1-nlb/a99fa07834e256e5",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "lab-app1-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b7a2cc73e7914f44"
              },
              {
                "subnet_id": "subnet-0f09bf5872b6d42d9"
              }
            ],
            "subnets": [
              "subnet-0b7a2cc73e7914f44",
              "subnet-0f09bf5872b6d42d9"
            ],
            "tags": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "tags_all": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "vpc_id": "vpc-07193f359901e9fc1",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.app_lb.aws_eip.this",
            "module.app_lb.aws_s3_bucket.this",
            "module.app_lb.data.aws_s3_bucket.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_lb[\"app1-nlb\"]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "HTTP-traffic",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:listener/net/lab-app1-nlb/a99fa07834e256e5/04107447b531ec71",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTP-traffic/20989961f77a718a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:listener/net/lab-app1-nlb/a99fa07834e256e5/04107447b531ec71",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:loadbalancer/net/lab-app1-nlb/a99fa07834e256e5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "tags_all": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "aws_instance.spoke_vms",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.app_lb.aws_eip.this",
            "module.app_lb.aws_lb.this",
            "module.app_lb.aws_lb_target_group.this",
            "module.app_lb.aws_s3_bucket.this",
            "module.app_lb.data.aws_s3_bucket.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "HTTPS-traffic",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:listener/net/lab-app1-nlb/a99fa07834e256e5/f70c3fad4751043f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTPS-traffic/082995de28d80b5d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:listener/net/lab-app1-nlb/a99fa07834e256e5/f70c3fad4751043f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:loadbalancer/net/lab-app1-nlb/a99fa07834e256e5",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "tags_all": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "aws_instance.spoke_vms",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.app_lb.aws_eip.this",
            "module.app_lb.aws_lb.this",
            "module.app_lb.aws_lb_target_group.this",
            "module.app_lb.aws_s3_bucket.this",
            "module.app_lb.data.aws_s3_bucket.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "SSH-traffic",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:listener/net/lab-app1-nlb/a99fa07834e256e5/d0256192c7b6a89d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-SSH-traffic/7a0730bbd2f79ad7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:listener/net/lab-app1-nlb/a99fa07834e256e5/d0256192c7b6a89d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:loadbalancer/net/lab-app1-nlb/a99fa07834e256e5",
            "mutual_authentication": [],
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "tags_all": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "aws_instance.spoke_vms",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.app_lb.aws_eip.this",
            "module.app_lb.aws_lb.this",
            "module.app_lb.aws_lb_target_group.this",
            "module.app_lb.aws_s3_bucket.this",
            "module.app_lb.data.aws_s3_bucket.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_lb[\"app1-nlb\"]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "HTTP-traffic",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTP-traffic/20989961f77a718a",
            "arn_suffix": "targetgroup/lab-app1-nlb-HTTP-traffic/20989961f77a718a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTP-traffic/20989961f77a718a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lab-app1-nlb-HTTP-traffic",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "tags_all": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "aws_instance.spoke_vms",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "HTTPS-traffic",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTPS-traffic/082995de28d80b5d",
            "arn_suffix": "targetgroup/lab-app1-nlb-HTTPS-traffic/082995de28d80b5d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTPS-traffic/082995de28d80b5d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lab-app1-nlb-HTTPS-traffic",
            "port": 443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "tags_all": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "aws_instance.spoke_vms",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "SSH-traffic",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-SSH-traffic/7a0730bbd2f79ad7",
            "arn_suffix": "targetgroup/lab-app1-nlb-SSH-traffic/7a0730bbd2f79ad7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-SSH-traffic/7a0730bbd2f79ad7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lab-app1-nlb-SSH-traffic",
            "port": 22,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": true,
                "type": "source_ip"
              }
            ],
            "tags": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "tags_all": {
              "aplicacao": "vm-series",
              "centro_custo": "suporte"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "aws_instance.spoke_vms",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_lb[\"app1-nlb\"]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "HTTP-traffic-app1_vm01",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTP-traffic/20989961f77a718a-20241011174925988400000022",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTP-traffic/20989961f77a718a",
            "target_id": "i-020a7daecf257f638"
          },
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "aws_instance.spoke_vms",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.app_lb.aws_lb_target_group.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "HTTP-traffic-app1_vm02",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTP-traffic/20989961f77a718a-20241011174926235500000026",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTP-traffic/20989961f77a718a",
            "target_id": "i-0feee451a0431232a"
          },
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "aws_instance.spoke_vms",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.app_lb.aws_lb_target_group.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "HTTPS-traffic-app1_vm01",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTPS-traffic/082995de28d80b5d-20241011174926133900000024",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTPS-traffic/082995de28d80b5d",
            "target_id": "i-020a7daecf257f638"
          },
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "aws_instance.spoke_vms",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.app_lb.aws_lb_target_group.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "HTTPS-traffic-app1_vm02",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTPS-traffic/082995de28d80b5d-20241011174925940800000021",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-HTTPS-traffic/082995de28d80b5d",
            "target_id": "i-0feee451a0431232a"
          },
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "aws_instance.spoke_vms",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.app_lb.aws_lb_target_group.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "SSH-traffic-app1_vm01",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-SSH-traffic/7a0730bbd2f79ad7-20241011174926235200000025",
            "port": 22,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-SSH-traffic/7a0730bbd2f79ad7",
            "target_id": "i-020a7daecf257f638"
          },
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "aws_instance.spoke_vms",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.app_lb.aws_lb_target_group.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "SSH-traffic-app1_vm02",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-SSH-traffic/7a0730bbd2f79ad7-20241011174926000200000023",
            "port": 22,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-app1-nlb-SSH-traffic/7a0730bbd2f79ad7",
            "target_id": "i-0feee451a0431232a"
          },
          "dependencies": [
            "aws_iam_instance_profile.spoke_vm_iam_instance_profile",
            "aws_iam_role.spoke_vm_ec2_iam_role",
            "aws_instance.spoke_vms",
            "data.aws_ami.this",
            "data.aws_ebs_default_kms_key.current",
            "data.aws_kms_alias.current_arn",
            "module.app_lb.aws_lb_target_group.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gwlb[\"security_gwlb\"]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:loadbalancer/gwy/lab-security-gwlb/1160008e59c6fe81",
            "arn_suffix": "gwy/lab-security-gwlb/1160008e59c6fe81",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:loadbalancer/gwy/lab-security-gwlb/1160008e59c6fe81",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "gateway",
            "name": "lab-security-gwlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04726c5d92e53c28f"
              },
              {
                "subnet_id": "subnet-0c4f629c2870ad1e3"
              }
            ],
            "subnets": [
              "subnet-04726c5d92e53c28f",
              "subnet-0c4f629c2870ad1e3"
            ],
            "tags": {
              "Name": "lab-security-gwlb"
            },
            "tags_all": {
              "Name": "lab-security-gwlb"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gwlb[\"security_gwlb\"]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:listener/gwy/lab-security-gwlb/1160008e59c6fe81/2a05e2ededcd667e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-security-gwlb/00244b3808341bd326",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:listener/gwy/lab-security-gwlb/1160008e59c6fe81/2a05e2ededcd667e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:loadbalancer/gwy/lab-security-gwlb/1160008e59c6fe81",
            "mutual_authentication": [],
            "port": 0,
            "protocol": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gwlb[\"security_gwlb\"]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-security-gwlb/00244b3808341bd326",
            "arn_suffix": "targetgroup/lab-security-gwlb/00244b3808341bd326",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "port": "80",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:242407861384:targetgroup/lab-security-gwlb/00244b3808341bd326",
            "lambda_multi_value_headers_enabled": false,
            "name": "lab-security-gwlb",
            "port": 6081,
            "protocol": "GENEVE",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip_dest_ip_proto"
              }
            ],
            "target_failover": [
              {
                "on_deregistration": "no_rebalance",
                "on_unhealthy": "no_rebalance"
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gwlbe_endpoint[\"app1_inbound\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "from-igw-to-lb-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.104.2.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05b7841f5c3696117450934804",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05b7841f5c3696117",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0e13977e305b366ad",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "from-igw-to-lb-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.104.130.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05b7841f5c36961171771377527",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05b7841f5c3696117",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0fa2d1556504be5e2",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gwlbe_endpoint[\"app1_inbound\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:vpc-endpoint/vpce-0e13977e305b366ad",
            "id": "vpce-0e13977e305b366ad",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0cfd01d8a538940f3"
            ],
            "owner_id": "242407861384",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0052f625b7c2df4e8",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.104.3.145",
                "subnet_id": "subnet-010611d4052f22141"
              }
            ],
            "subnet_ids": [
              "subnet-010611d4052f22141"
            ],
            "tags": {
              "Name": "lab-app1-gwlb-endpointa"
            },
            "tags_all": {
              "Name": "lab-app1-gwlb-endpointa"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:vpc-endpoint/vpce-0fa2d1556504be5e2",
            "id": "vpce-0fa2d1556504be5e2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0807519492d104c13"
            ],
            "owner_id": "242407861384",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0052f625b7c2df4e8",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.104.131.79",
                "subnet_id": "subnet-07d6142eed7353703"
              }
            ],
            "subnet_ids": [
              "subnet-07d6142eed7353703"
            ],
            "tags": {
              "Name": "lab-app1-gwlb-endpointb"
            },
            "tags_all": {
              "Name": "lab-app1-gwlb-endpointb"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gwlbe_endpoint[\"security_gwlb_eastwest\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:vpc-endpoint/vpce-09ce11aeca6a9447c",
            "id": "vpce-09ce11aeca6a9447c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02d3d22e9597d906b"
            ],
            "owner_id": "242407861384",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0052f625b7c2df4e8",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.100.10.94",
                "subnet_id": "subnet-0a496d84fd8df17c4"
              }
            ],
            "subnet_ids": [
              "subnet-0a496d84fd8df17c4"
            ],
            "tags": {
              "Name": "lab-eastwest-gwlb-endpointa"
            },
            "tags_all": {
              "Name": "lab-eastwest-gwlb-endpointa"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:vpc-endpoint/vpce-0c88c89bedbcd2491",
            "id": "vpce-0c88c89bedbcd2491",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06604dfd1017a05d5"
            ],
            "owner_id": "242407861384",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0052f625b7c2df4e8",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.100.74.120",
                "subnet_id": "subnet-02caa0de3c087caac"
              }
            ],
            "subnet_ids": [
              "subnet-02caa0de3c087caac"
            ],
            "tags": {
              "Name": "lab-eastwest-gwlb-endpointb"
            },
            "tags_all": {
              "Name": "lab-eastwest-gwlb-endpointb"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.gwlbe_endpoint[\"security_gwlb_outbound\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:vpc-endpoint/vpce-0fc7e29a7e2e59575",
            "id": "vpce-0fc7e29a7e2e59575",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d9762814d0ce0256"
            ],
            "owner_id": "242407861384",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0052f625b7c2df4e8",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.100.4.49",
                "subnet_id": "subnet-035395d9ff5d0bf61"
              }
            ],
            "subnet_ids": [
              "subnet-035395d9ff5d0bf61"
            ],
            "tags": {
              "Name": "lab-outbound-gwlb-endpointa"
            },
            "tags_all": {
              "Name": "lab-outbound-gwlb-endpointa"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:vpc-endpoint/vpce-014ecede2653d1171",
            "id": "vpce-014ecede2653d1171",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0bf706bf37ccb5ffa"
            ],
            "owner_id": "242407861384",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0052f625b7c2df4e8",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.100.68.221",
                "subnet_id": "subnet-0142f43255b78f732"
              }
            ],
            "subnet_ids": [
              "subnet-0142f43255b78f732"
            ],
            "tags": {
              "Name": "lab-outbound-gwlb-endpointb"
            },
            "tags_all": {
              "Name": "lab-outbound-gwlb-endpointb"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.natgw_set[\"security_nat_gw\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbc0b818493e9b0b",
            "arn": "arn:aws:ec2:us-east-1:242407861384:elastic-ip/eipalloc-0fbc0b818493e9b0b",
            "domain": "vpc",
            "id": "eipalloc-0fbc0b818493e9b0b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-221-125-31.compute-1.amazonaws.com",
            "public_ip": "44.221.125.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "natgwa"
            },
            "tags_all": {
              "Name": "natgwa"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016723a31e467cfcc",
            "arn": "arn:aws:ec2:us-east-1:242407861384:elastic-ip/eipalloc-016723a31e467cfcc",
            "domain": "vpc",
            "id": "eipalloc-016723a31e467cfcc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-21-92-128.compute-1.amazonaws.com",
            "public_ip": "107.21.92.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "natgwb"
            },
            "tags_all": {
              "Name": "natgwb"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.natgw_set[\"security_nat_gw\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbc0b818493e9b0b",
            "association_id": "eipassoc-06ee81cf1910e458b",
            "connectivity_type": "public",
            "id": "nat-0314c386dfb7bf794",
            "network_interface_id": "eni-0ff82af1201b12fa2",
            "private_ip": "10.100.11.140",
            "public_ip": "44.221.125.31",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-022a335df726ace68",
            "tags": {
              "Name": "natgwa"
            },
            "tags_all": {
              "Name": "natgwa"
            }
          },
          "dependencies": [
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.data.aws_eip.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016723a31e467cfcc",
            "association_id": "eipassoc-04594a3b264c74efc",
            "connectivity_type": "public",
            "id": "nat-04f55de5c26583c27",
            "network_interface_id": "eni-095e5ea45a51fecdf",
            "private_ip": "10.100.75.119",
            "public_ip": "107.21.92.128",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b6e31271b5a851d9",
            "tags": {
              "Name": "natgwb"
            },
            "tags_all": {
              "Name": "natgwb"
            }
          },
          "dependencies": [
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.data.aws_eip.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"app1_vpc-app1_gwlbe\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-064cd440e68180da1",
            "id": "rtb-064cd440e68180da1",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app1_gwlbea"
            },
            "tags_all": {
              "Name": "app1_gwlbea"
            },
            "timeouts": null,
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-04f7ce00553fd2be4",
            "id": "rtb-04f7ce00553fd2be4",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app1_gwlbeb"
            },
            "tags_all": {
              "Name": "app1_gwlbeb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"app1_vpc-app1_gwlbe\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0067321e46fb57533",
            "route_table_id": "rtb-064cd440e68180da1",
            "subnet_id": "subnet-010611d4052f22141"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bc52404646538c8",
            "route_table_id": "rtb-04f7ce00553fd2be4",
            "subnet_id": "subnet-07d6142eed7353703"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"app1_vpc-app1_gwlbe\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-010611d4052f22141",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.104.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010611d4052f22141",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1_gwlbea"
            },
            "tags_all": {
              "Name": "app1_gwlbea"
            },
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-07d6142eed7353703",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.104.131.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d6142eed7353703",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1_gwlbeb"
            },
            "tags_all": {
              "Name": "app1_gwlbeb"
            },
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"app1_vpc-app1_lb\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-07c9b4f7aea13806a",
            "id": "rtb-07c9b4f7aea13806a",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app1_lba"
            },
            "tags_all": {
              "Name": "app1_lba"
            },
            "timeouts": null,
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-0b1c36f81577877a6",
            "id": "rtb-0b1c36f81577877a6",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app1_lbb"
            },
            "tags_all": {
              "Name": "app1_lbb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"app1_vpc-app1_lb\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036df610b068a0667",
            "route_table_id": "rtb-07c9b4f7aea13806a",
            "subnet_id": "subnet-0f09bf5872b6d42d9"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dba7165319cb09af",
            "route_table_id": "rtb-0b1c36f81577877a6",
            "subnet_id": "subnet-0b7a2cc73e7914f44"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"app1_vpc-app1_lb\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0f09bf5872b6d42d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.104.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f09bf5872b6d42d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1_lba"
            },
            "tags_all": {
              "Name": "app1_lba"
            },
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0b7a2cc73e7914f44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.104.130.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7a2cc73e7914f44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1_lbb"
            },
            "tags_all": {
              "Name": "app1_lbb"
            },
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"app1_vpc-app1_vm\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-0dbbaca229952730d",
            "id": "rtb-0dbbaca229952730d",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app1_vma"
            },
            "tags_all": {
              "Name": "app1_vma"
            },
            "timeouts": null,
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-0591959c91b0dd557",
            "id": "rtb-0591959c91b0dd557",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app1_vmb"
            },
            "tags_all": {
              "Name": "app1_vmb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"app1_vpc-app1_vm\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c39f190a8bf5455",
            "route_table_id": "rtb-0dbbaca229952730d",
            "subnet_id": "subnet-0168b718fb9ec7ab3"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1aad6673f799375",
            "route_table_id": "rtb-0591959c91b0dd557",
            "subnet_id": "subnet-05f782e8625e3a81b"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"app1_vpc-app1_vm\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0168b718fb9ec7ab3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.104.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0168b718fb9ec7ab3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1_vma"
            },
            "tags_all": {
              "Name": "app1_vma"
            },
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-05f782e8625e3a81b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.104.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f782e8625e3a81b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1_vmb"
            },
            "tags_all": {
              "Name": "app1_vmb"
            },
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-gwlb\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-0702fd54ba09b4098",
            "id": "rtb-0702fd54ba09b4098",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gwlba"
            },
            "tags_all": {
              "Name": "gwlba"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-01bce14852c5b3dc2",
            "id": "rtb-01bce14852c5b3dc2",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gwlbb"
            },
            "tags_all": {
              "Name": "gwlbb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-gwlb\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0a688b109bc3b2c",
            "route_table_id": "rtb-0702fd54ba09b4098",
            "subnet_id": "subnet-0c4f629c2870ad1e3"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029b256f5ccbe966d",
            "route_table_id": "rtb-01bce14852c5b3dc2",
            "subnet_id": "subnet-04726c5d92e53c28f"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-gwlb\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0c4f629c2870ad1e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4f629c2870ad1e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlba"
            },
            "tags_all": {
              "Name": "gwlba"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-04726c5d92e53c28f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.69.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04726c5d92e53c28f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlbb"
            },
            "tags_all": {
              "Name": "gwlbb"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-gwlbe_eastwest\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-0af074d1472d153f9",
            "id": "rtb-0af074d1472d153f9",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gwlbe_eastwesta"
            },
            "tags_all": {
              "Name": "gwlbe_eastwesta"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-0ae5eca82fc8c6b55",
            "id": "rtb-0ae5eca82fc8c6b55",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gwlbe_eastwestb"
            },
            "tags_all": {
              "Name": "gwlbe_eastwestb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-gwlbe_eastwest\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049229f6414437e1f",
            "route_table_id": "rtb-0af074d1472d153f9",
            "subnet_id": "subnet-0a496d84fd8df17c4"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c864a69c6593d15",
            "route_table_id": "rtb-0ae5eca82fc8c6b55",
            "subnet_id": "subnet-02caa0de3c087caac"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-gwlbe_eastwest\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0a496d84fd8df17c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a496d84fd8df17c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlbe_eastwesta"
            },
            "tags_all": {
              "Name": "gwlbe_eastwesta"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-02caa0de3c087caac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.74.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02caa0de3c087caac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlbe_eastwestb"
            },
            "tags_all": {
              "Name": "gwlbe_eastwestb"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-gwlbe_outbound\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-04666ce93f3ea396f",
            "id": "rtb-04666ce93f3ea396f",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gwlbe_outbounda"
            },
            "tags_all": {
              "Name": "gwlbe_outbounda"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-020dbd34455a82f08",
            "id": "rtb-020dbd34455a82f08",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gwlbe_outboundb"
            },
            "tags_all": {
              "Name": "gwlbe_outboundb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-gwlbe_outbound\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094f59a3b0909f89a",
            "route_table_id": "rtb-04666ce93f3ea396f",
            "subnet_id": "subnet-035395d9ff5d0bf61"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3d830feb70fda58",
            "route_table_id": "rtb-020dbd34455a82f08",
            "subnet_id": "subnet-0142f43255b78f732"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-gwlbe_outbound\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-035395d9ff5d0bf61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035395d9ff5d0bf61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlbe_outbounda"
            },
            "tags_all": {
              "Name": "gwlbe_outbounda"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0142f43255b78f732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.68.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0142f43255b78f732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gwlbe_outboundb"
            },
            "tags_all": {
              "Name": "gwlbe_outboundb"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-lambda\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-02560c39abc2ebe3e",
            "id": "rtb-02560c39abc2ebe3e",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lambdaa"
            },
            "tags_all": {
              "Name": "lambdaa"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-035f2697d7ad67aa7",
            "id": "rtb-035f2697d7ad67aa7",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lambdab"
            },
            "tags_all": {
              "Name": "lambdab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-lambda\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06814e20422cb61bb",
            "route_table_id": "rtb-02560c39abc2ebe3e",
            "subnet_id": "subnet-0f9cd419c11542121"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b68f0c42ef3b6c3",
            "route_table_id": "rtb-035f2697d7ad67aa7",
            "subnet_id": "subnet-01bdd3e200bab4fb9"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-lambda\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0f9cd419c11542121",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9cd419c11542121",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lambdaa"
            },
            "tags_all": {
              "Name": "lambdaa"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-01bdd3e200bab4fb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.76.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bdd3e200bab4fb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lambdab"
            },
            "tags_all": {
              "Name": "lambdab"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-mgmt\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-02fa546e4f250fb39",
            "id": "rtb-02fa546e4f250fb39",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mgmta"
            },
            "tags_all": {
              "Name": "mgmta"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-08d1df8007936e4ce",
            "id": "rtb-08d1df8007936e4ce",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mgmtb"
            },
            "tags_all": {
              "Name": "mgmtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-mgmt\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5d17331a4e2a5d9",
            "route_table_id": "rtb-02fa546e4f250fb39",
            "subnet_id": "subnet-0860a1ec3872f4248"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e3c8e617ddfc18e",
            "route_table_id": "rtb-08d1df8007936e4ce",
            "subnet_id": "subnet-04bb12eda607dc3a3"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-mgmt\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0860a1ec3872f4248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0860a1ec3872f4248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgmta"
            },
            "tags_all": {
              "Name": "mgmta"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-04bb12eda607dc3a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bb12eda607dc3a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgmtb"
            },
            "tags_all": {
              "Name": "mgmtb"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-natgw\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-0aedd5dec03977dc1",
            "id": "rtb-0aedd5dec03977dc1",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "natgwa"
            },
            "tags_all": {
              "Name": "natgwa"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-04edc536fce1ca790",
            "id": "rtb-04edc536fce1ca790",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "natgwb"
            },
            "tags_all": {
              "Name": "natgwb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-natgw\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4f9e9de1ca6ba62",
            "route_table_id": "rtb-0aedd5dec03977dc1",
            "subnet_id": "subnet-022a335df726ace68"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05645de212b900154",
            "route_table_id": "rtb-04edc536fce1ca790",
            "subnet_id": "subnet-0b6e31271b5a851d9"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-natgw\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-022a335df726ace68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022a335df726ace68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "natgwa"
            },
            "tags_all": {
              "Name": "natgwa"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0b6e31271b5a851d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.75.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6e31271b5a851d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "natgwb"
            },
            "tags_all": {
              "Name": "natgwb"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-private\"]",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-05c4e56f505fc9466",
            "network_acl_id": "acl-05d65ba2f45a75457",
            "subnet_id": "subnet-0609621422e3cd592"
          },
          "dependencies": [
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01f135f3fd2646ac3",
            "network_acl_id": "acl-05d65ba2f45a75457",
            "subnet_id": "subnet-074f8f4b0d2160e45"
          },
          "dependencies": [
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-private\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-03c259e76d0abdfb3",
            "id": "rtb-03c259e76d0abdfb3",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privatea"
            },
            "tags_all": {
              "Name": "privatea"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-01219b900052f834d",
            "id": "rtb-01219b900052f834d",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privateb"
            },
            "tags_all": {
              "Name": "privateb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-private\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04797fc0df35918d6",
            "route_table_id": "rtb-03c259e76d0abdfb3",
            "subnet_id": "subnet-0609621422e3cd592"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2975817d73cb4c0",
            "route_table_id": "rtb-01219b900052f834d",
            "subnet_id": "subnet-074f8f4b0d2160e45"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-private\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0609621422e3cd592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0609621422e3cd592",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatea"
            },
            "tags_all": {
              "Name": "privatea"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-074f8f4b0d2160e45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.65.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074f8f4b0d2160e45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privateb"
            },
            "tags_all": {
              "Name": "privateb"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-public\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-036b6c836b5376923",
            "id": "rtb-036b6c836b5376923",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "publica"
            },
            "tags_all": {
              "Name": "publica"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-0d619a7afbf850e84",
            "id": "rtb-0d619a7afbf850e84",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "publicb"
            },
            "tags_all": {
              "Name": "publicb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-public\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028d0cdda50c91a74",
            "route_table_id": "rtb-036b6c836b5376923",
            "subnet_id": "subnet-08697dbf67ca1731e"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07285e9291dca7cfb",
            "route_table_id": "rtb-0d619a7afbf850e84",
            "subnet_id": "subnet-0ca49989062c9a480"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-public\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-08697dbf67ca1731e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08697dbf67ca1731e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publica"
            },
            "tags_all": {
              "Name": "publica"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0ca49989062c9a480",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.66.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca49989062c9a480",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicb"
            },
            "tags_all": {
              "Name": "publicb"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-tgw_attach\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-0dba57b9ce2a92eaa",
            "id": "rtb-0dba57b9ce2a92eaa",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tgw_attacha"
            },
            "tags_all": {
              "Name": "tgw_attacha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-05dfcc80403dea615",
            "id": "rtb-05dfcc80403dea615",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tgw_attachb"
            },
            "tags_all": {
              "Name": "tgw_attachb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-tgw_attach\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d3bb93d838fdef2",
            "route_table_id": "rtb-0dba57b9ce2a92eaa",
            "subnet_id": "subnet-0d3ebc7b21df86726"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab7bda5f205f215d",
            "route_table_id": "rtb-05dfcc80403dea615",
            "subnet_id": "subnet-0cee126895e4b2948"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-tgw_attach\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0d3ebc7b21df86726",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3ebc7b21df86726",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tgw_attacha"
            },
            "tags_all": {
              "Name": "tgw_attacha"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:subnet/subnet-0cee126895e4b2948",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.67.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cee126895e4b2948",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242407861384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tgw_attachb"
            },
            "tags_all": {
              "Name": "tgw_attachb"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64550,
            "arn": "arn:aws:ec2:us-east-1:242407861384:transit-gateway/tgw-0583ea0759c9b03fb",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "dns_support": "enable",
            "id": "tgw-0583ea0759c9b03fb",
            "multicast_support": "disable",
            "owner_id": "242407861384",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "lab-tgw"
            },
            "tags_all": {
              "Name": "lab-tgw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "from_security_vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:transit-gateway-route-table/tgw-rtb-04557dedf84a5c56e",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-04557dedf84a5c56e",
            "tags": {
              "Name": "from_security"
            },
            "tags_all": {
              "Name": "from_security"
            },
            "transit_gateway_id": "tgw-0583ea0759c9b03fb"
          },
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this"
          ]
        },
        {
          "index_key": "from_spoke_vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:transit-gateway-route-table/tgw-rtb-0e03c1e4a4dac9f45",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0e03c1e4a4dac9f45",
            "tags": {
              "Name": "from_spokes"
            },
            "tags_all": {
              "Name": "from_spokes"
            },
            "transit_gateway_id": "tgw-0583ea0759c9b03fb"
          },
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway_attachment[\"app1\"]",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0e03c1e4a4dac9f45_tgw-attach-0d93c98a816628b4b",
            "replace_existing_association": false,
            "resource_id": "vpc-07193f359901e9fc1",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0d93c98a816628b4b",
            "transit_gateway_route_table_id": "tgw-rtb-0e03c1e4a4dac9f45"
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway_attachment[\"app1\"]",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "to1",
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-04557dedf84a5c56e_tgw-attach-0d93c98a816628b4b",
            "resource_id": "vpc-07193f359901e9fc1",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0d93c98a816628b4b",
            "transit_gateway_route_table_id": "tgw-rtb-04557dedf84a5c56e"
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway_attachment[\"app1\"]",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "enable",
            "dns_support": "enable",
            "id": "tgw-attach-0d93c98a816628b4b",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0168b718fb9ec7ab3",
              "subnet-05f782e8625e3a81b"
            ],
            "tags": {
              "Name": "lab-app1-spoke-vpc"
            },
            "tags_all": {
              "Name": "lab-app1-spoke-vpc"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0583ea0759c9b03fb",
            "vpc_id": "vpc-07193f359901e9fc1",
            "vpc_owner_id": "242407861384"
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway_attachment[\"security\"]",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-04557dedf84a5c56e_tgw-attach-0a60bd49824328a63",
            "replace_existing_association": false,
            "resource_id": "vpc-0832bc5d5658e28d8",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0a60bd49824328a63",
            "transit_gateway_route_table_id": "tgw-rtb-04557dedf84a5c56e"
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway_attachment[\"security\"]",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "to1",
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0e03c1e4a4dac9f45_tgw-attach-0a60bd49824328a63",
            "resource_id": "vpc-0832bc5d5658e28d8",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0a60bd49824328a63",
            "transit_gateway_route_table_id": "tgw-rtb-0e03c1e4a4dac9f45"
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway_attachment[\"security\"]",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "enable",
            "dns_support": "enable",
            "id": "tgw-attach-0a60bd49824328a63",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0cee126895e4b2948",
              "subnet-0d3ebc7b21df86726"
            ],
            "tags": {
              "Name": "lab-vmseries"
            },
            "tags_all": {
              "Name": "lab-vmseries"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0583ea0759c9b03fb",
            "vpc_id": "vpc-0832bc5d5658e28d8",
            "vpc_owner_id": "242407861384"
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"app1_vpc\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:internet-gateway/igw-0c5b65660bb5a320d",
            "id": "igw-0c5b65660bb5a320d",
            "owner_id": "242407861384",
            "tags": {
              "Name": "lab-app1-spoke-vpc-igw"
            },
            "tags_all": {
              "Name": "lab-app1-spoke-vpc-igw"
            },
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"app1_vpc\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "from_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-05b7841f5c3696117",
            "id": "rtb-05b7841f5c3696117",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lab-app1-spoke-vpc-igw"
            },
            "tags_all": {
              "Name": "lab-app1-spoke-vpc-igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"app1_vpc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "from_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-0c5b65660bb5a320d",
            "id": "rtbassoc-08e109efabcbb38f5",
            "route_table_id": "rtb-05b7841f5c3696117"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"app1_vpc\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app1_vm",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:security-group/sg-052a5b5e4be783d27",
            "description": "Security group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit All traffic outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052a5b5e4be783d27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.104.0.0/16",
                  "10.105.0.0/16"
                ],
                "description": "Permit HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.104.0.0/16",
                  "10.105.0.0/16"
                ],
                "description": "Permit HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.104.0.0/16",
                  "10.105.0.0/16"
                ],
                "description": "Permit SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app1_vm",
            "name_prefix": "",
            "owner_id": "242407861384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app1_vm"
            },
            "tags_all": {
              "Name": "app1_vm"
            },
            "timeouts": null,
            "vpc_id": "vpc-07193f359901e9fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"app1_vpc\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:vpc/vpc-07193f359901e9fc1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.104.0.0/16",
            "default_network_acl_id": "acl-0caeac0281890b7ed",
            "default_route_table_id": "rtb-0f169b308884fdb5a",
            "default_security_group_id": "sg-038eff4da8e5211b7",
            "dhcp_options_id": "dopt-02065389d1a3b4596",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07193f359901e9fc1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f169b308884fdb5a",
            "owner_id": "242407861384",
            "tags": {
              "Name": "lab-app1-spoke-vpc"
            },
            "tags_all": {
              "Name": "lab-app1-spoke-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"security_vpc\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:internet-gateway/igw-03bad268ffed533b6",
            "id": "igw-03bad268ffed533b6",
            "owner_id": "242407861384",
            "tags": {
              "Name": "lab-security-vpc-igw"
            },
            "tags_all": {
              "Name": "lab-security-vpc-igw"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"security_vpc\"]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "trusted_path_monitoring",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:network-acl/acl-05d65ba2f45a75457",
            "egress": [],
            "id": "acl-05d65ba2f45a75457",
            "ingress": [],
            "owner_id": "242407861384",
            "subnet_ids": [],
            "tags": {
              "Name": "trusted-path-monitoring"
            },
            "tags_all": {
              "Name": "trusted-path-monitoring"
            },
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"security_vpc\"]",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "trusted_path_monitoring.110",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.100.1.0/24",
            "egress": true,
            "from_port": null,
            "icmp_code": 0,
            "icmp_type": 0,
            "id": "nacl-3606264133",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05d65ba2f45a75457",
            "protocol": "1",
            "rule_action": "deny",
            "rule_number": 110,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "trusted_path_monitoring.120",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.100.65.0/24",
            "egress": true,
            "from_port": null,
            "icmp_code": 0,
            "icmp_type": 0,
            "id": "nacl-1798919563",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05d65ba2f45a75457",
            "protocol": "1",
            "rule_action": "deny",
            "rule_number": 120,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "trusted_path_monitoring.200",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2941131207",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05d65ba2f45a75457",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "trusted_path_monitoring.300",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2212954898",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05d65ba2f45a75457",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"security_vpc\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "from_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:route-table/rtb-0df18703ab30a0265",
            "id": "rtb-0df18703ab30a0265",
            "owner_id": "242407861384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lab-security-vpc-igw"
            },
            "tags_all": {
              "Name": "lab-security-vpc-igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"security_vpc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "from_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-03bad268ffed533b6",
            "id": "rtbassoc-0327644fc25f06abb",
            "route_table_id": "rtb-0df18703ab30a0265"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"security_vpc\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "lambda",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:security-group/sg-0539cef45c5d4b88e",
            "description": "Security group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit All traffic outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0539cef45c5d4b88e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit All traffic inbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lambda",
            "name_prefix": "",
            "owner_id": "242407861384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lambda"
            },
            "tags_all": {
              "Name": "lambda"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "vmseries_mgmt",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:security-group/sg-01d955e198dcacecd",
            "description": "Security group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit All traffic outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d955e198dcacecd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Permit Panorama Logging",
                "from_port": 28443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 28443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Permit Panorama Management",
                "from_port": 3978,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3978
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Permit Panorama SSH (Optional)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vmseries_mgmt",
            "name_prefix": "",
            "owner_id": "242407861384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vmseries_mgmt"
            },
            "tags_all": {
              "Name": "vmseries_mgmt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "vmseries_private",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:security-group/sg-03d361ae7f01bac75",
            "description": "Security group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit All traffic outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d361ae7f01bac75",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.5.0/24",
                  "10.100.69.0/24"
                ],
                "description": "Permit GENEVE to GWLB subnets",
                "from_port": 6081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 6081
              },
              {
                "cidr_blocks": [
                  "10.100.5.0/24",
                  "10.100.69.0/24"
                ],
                "description": "Permit Port 80 Health Probe to GWLB subnets",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vmseries_private",
            "name_prefix": "",
            "owner_id": "242407861384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vmseries_private"
            },
            "tags_all": {
              "Name": "vmseries_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "vmseries_public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:security-group/sg-0d93dd0e9c24bff08",
            "description": "Security group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit All traffic outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d93dd0e9c24bff08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.104.0.0/16",
                  "10.105.0.0/16"
                ],
                "description": "Permit HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.104.0.0/16",
                  "10.105.0.0/16"
                ],
                "description": "Permit HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.104.0.0/16",
                  "10.105.0.0/16"
                ],
                "description": "Permit SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vmseries_public",
            "name_prefix": "",
            "owner_id": "242407861384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vmseries_public"
            },
            "tags_all": {
              "Name": "vmseries_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0832bc5d5658e28d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"security_vpc\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:242407861384:vpc/vpc-0832bc5d5658e28d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-06cb25ffdafbf1467",
            "default_route_table_id": "rtb-029f7792b22c38e7f",
            "default_security_group_id": "sg-0b7e6a638d6d3185c",
            "dhcp_options_id": "dopt-02065389d1a3b4596",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0832bc5d5658e28d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-029f7792b22c38e7f",
            "owner_id": "242407861384",
            "tags": {
              "Name": "lab-security-vpc"
            },
            "tags_all": {
              "Name": "lab-security-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"app1_vpc-app1_gwlbe_0.0.0.0/0\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c5b65660bb5a320d",
            "id": "r-rtb-064cd440e68180da11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-064cd440e68180da1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c5b65660bb5a320d",
            "id": "r-rtb-04f7ce00553fd2be41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f7ce00553fd2be4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"app1_vpc-app1_lb_0.0.0.0/0\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07c9b4f7aea13806a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c9b4f7aea13806a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0e13977e305b366ad",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b1c36f81577877a61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b1c36f81577877a6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0fa2d1556504be5e2",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"app1_vpc-app1_vm_0.0.0.0/0\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dbbaca229952730d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dbbaca229952730d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0583ea0759c9b03fb",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0591959c91b0dd5571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0591959c91b0dd557",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0583ea0759c9b03fb",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"security_vpc-gwlbe_outbound_10.0.0.0/8\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04666ce93f3ea396f3423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04666ce93f3ea396f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0583ea0759c9b03fb",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-020dbd34455a82f083423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-020dbd34455a82f08",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0583ea0759c9b03fb",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"security_vpc-lambda_0.0.0.0/0\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02560c39abc2ebe3e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0314c386dfb7bf794",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02560c39abc2ebe3e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-035f2697d7ad67aa71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04f55de5c26583c27",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035f2697d7ad67aa7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"security_vpc-lambda_10.0.0.0/8\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02560c39abc2ebe3e3423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02560c39abc2ebe3e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0583ea0759c9b03fb",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-035f2697d7ad67aa73423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035f2697d7ad67aa7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0583ea0759c9b03fb",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"security_vpc-lambda_10.255.0.0/16\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.255.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02560c39abc2ebe3e4278310178",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02560c39abc2ebe3e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0583ea0759c9b03fb",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.255.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-035f2697d7ad67aa74278310178",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035f2697d7ad67aa7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0583ea0759c9b03fb",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"security_vpc-mgmt_0.0.0.0/0\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03bad268ffed533b6",
            "id": "r-rtb-02fa546e4f250fb391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02fa546e4f250fb39",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03bad268ffed533b6",
            "id": "r-rtb-08d1df8007936e4ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d1df8007936e4ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"security_vpc-mgmt_10.0.0.0/8\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02fa546e4f250fb393423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02fa546e4f250fb39",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0583ea0759c9b03fb",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08d1df8007936e4ce3423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d1df8007936e4ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0583ea0759c9b03fb",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"security_vpc-natgw_0.0.0.0/0\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03bad268ffed533b6",
            "id": "r-rtb-0aedd5dec03977dc11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aedd5dec03977dc1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03bad268ffed533b6",
            "id": "r-rtb-04edc536fce1ca7901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04edc536fce1ca790",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"security_vpc-natgw_10.0.0.0/8\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0aedd5dec03977dc13423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aedd5dec03977dc1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0fc7e29a7e2e59575",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04edc536fce1ca7903423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04edc536fce1ca790",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-014ecede2653d1171",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"security_vpc-public_0.0.0.0/0\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-036b6c836b53769231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0314c386dfb7bf794",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-036b6c836b5376923",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d619a7afbf850e841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04f55de5c26583c27",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d619a7afbf850e84",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"security_vpc-tgw_attach_0.0.0.0/0\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dba57b9ce2a92eaa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dba57b9ce2a92eaa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0fc7e29a7e2e59575",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05dfcc80403dea6151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05dfcc80403dea615",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-014ecede2653d1171",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"security_vpc-tgw_attach_10.0.0.0/8\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dba57b9ce2a92eaa3423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dba57b9ce2a92eaa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-09ce11aeca6a9447c",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05dfcc80403dea6153423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05dfcc80403dea615",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0c88c89bedbcd2491",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gwlb.aws_lb.this",
            "module.gwlb.aws_lb_listener.this",
            "module.gwlb.aws_lb_target_group.this",
            "module.gwlb.aws_lb_target_group_attachment.this",
            "module.gwlb.aws_vpc_endpoint_service.this",
            "module.gwlb.aws_vpc_endpoint_service_allowed_principal.this",
            "module.gwlb.data.aws_caller_identity.current",
            "module.gwlb.data.aws_partition.this",
            "module.gwlbe_endpoint.aws_route.this",
            "module.gwlbe_endpoint.aws_vpc_endpoint.this",
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.transit_gateway.aws_ec2_transit_gateway.this",
            "module.transit_gateway.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway.this",
            "module.transit_gateway.data.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_association.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.transit_gateway_attachment.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}